--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,61 +1,98 @@
 <% layout("/layouts/boilerplate") %>
-<div class="row mt-3">
-    <div class="col-8 offset-2">
-        <h3>Edit your listing here</h3>
-        <form 
-        method="POST" 
-        action="/listings/<%=listing._id %>?_method=PUT" 
-        novalidate class="needs-validation"
-        enctype="multipart/form-data"
-        >
-            <div class="mb-3">
-                <label for="title" class="form-label">Title</label>
-                <input type="text" name="listing[title]" value="<%=listing.title %>" class="form-control" required>
-                <div class="valid-feedback">Title looks good!</div>
-            </div>
-            <div class="mb-3">
-                <label for="description" class="form-label">Description</label>
-                <textarea name="listing[description]" class="form-control" required><%=listing.description %></textarea>
-                <div class="invalid-feedback">
-                    Please enter a short description
-               </div>
-            </div>
-            <div class="mb-3">
-                Original Listing Image <br>
-                <img src="<%= originalImageUrl %>">
-            </div>
-            <div class="mb-3">
-                <label for="image" class="form-label">Upload New Image</label>
-                <input name="listing[image]" type="file" class="form-control">
-            </div>
-
-            <div class="row">
-                <div class="mb-3 col-md-4">
-                    <label for="price" class="form-label">Price</label>
-                    <input type="number" name="listing[price]" value="<%=listing.price %>" class="form-control" required>
-                    <div class="invalid-feedback">
-                        Price should be valid
-                   </div>
-                </div>
-                <div class="mb-3 col-md-8">
-                    <label for="country" class="form-label">Country</label>
-                    <input type="text" name="listing[country]" value="<%=listing.country %>" class="form-control" required>
-                    <div class="invalid-feedback">
-                        Country name should be valid
-                   </div>
-                </div>
-            </div>
-            
-            <div class="mb-3">
-                <label for="location" class="form-label">Location</label>
-                <input type="text" name="listing[location]" value="<%=listing.location %>" class="form-control" required>
-                <div class="invalid-feedback">
-                    Location should be valid
-                </div>
-            </div>
-            <button class="btn btn-dark edit-btn mt-3">Edit</button>
-            
-        </form>
-    </div>
-</div>
+<body>
     
+    <div class="row mt-3">
+        <div class="col-8 offset-2">
+            <h3>Edit your chat here</h3>
+            <form method="post" action="/listings/<%=listing._id %>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label>
+                    <input type="text" name="listing[title]" placeholder="Add a catchy title" value="<%=listing.title %>" class="form-control" required>
+                    <div class="valid-feedback">Title looks good!</div>
+                </div>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea name="listing[description]" placeholder="Write something about your listing" class="form-control" required><%=listing.description %></textarea>
+                    <div class="invalid-feedback">Please give a short description</div>
+                </div>
+                <div class="mb-3">
+                    Original Listing Images <br>
+                    <div class="card listing-card ">
+                        <!-- <img src="<%=listing.image.url %>" class="card-img-top" alt="listing-image" style="height: 20rem;" > -->
+                        <div id="<%=listing._id %>" class="carousel slide">
+                            <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#<%=listing._id %>" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#<%=listing._id %>" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                              <button type="button" data-bs-target="#<%=listing._id %>" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                              <% if(listing.image.length === 3) { %>
+                                <div class="carousel-item active card-img-top">
+                                  <img src="<%=listing.image[0].url %>" class="card-img-top" alt="listing-image" style="height: 20rem;">
+                                </div>
+                                <div class="carousel-item card-img-top">
+                                  <img src="<%=listing.image[1].url %>" class="card-img-top" alt="listing-image" style="height: 20rem;">    
+                                </div>
+                                <div class="carousel-item card-img-top">
+                                  <img src="<%=listing.image[2].url %>" class="card-img-top" alt="listing-image" style="height: 20rem;">
+                                </div>
+                              <% } else { %>
+                                <div class="carousel-item active card-img-top">
+                                  <img src="https://images.pexels.com/photos/18944516/pexels-photo-18944516/free-photo-of-view-of-a-wooden-pier-on-a-body-of-water-and-autumnal-trees-in-distance.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top" alt="listing-image" style="height: 20rem;">
+                                </div>
+                                <div class="carousel-item card-img-top">
+                                  <img src="https://images.pexels.com/photos/18944516/pexels-photo-18944516/free-photo-of-view-of-a-wooden-pier-on-a-body-of-water-and-autumnal-trees-in-distance.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top" alt="listing-image" style="height: 20rem;">    
+                                </div>
+                                <div class="carousel-item card-img-top">
+                                  <img src="https://images.pexels.com/photos/18944516/pexels-photo-18944516/free-photo-of-view-of-a-wooden-pier-on-a-body-of-water-and-autumnal-trees-in-distance.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top" alt="listing-image" style="height: 20rem;">
+                                </div>
+                              <% } %>
+
+
+
+    
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#<%=listing._id %>" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#<%=listing._id %>" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                </div>
+                <div class="mb-3">
+                  <h4>You have to select all three images to edit one</h4>
+                  <label for="first-img1" title="Terrible" class="form-label">Img1</label>
+                  <input type="file" id="first-img1" name="listing[image]" class="form-control"/>
+                  <label for="first-img2" title="Not good" class="form-label">Img2</label>
+                  <input type="file" id="first-img2" name="listing[image]" class="form-control"/>
+                  <label for="first-img3" title="Average" class="form-label">Img3</label>
+                  <input type="file" id="first-img3" name="listing[image]" class="form-control"/>    
+                </div>
+                <div class="row">
+                    <div class="mb-3 col-md-4">
+                        <label for="price" class="form-label">Price</label>
+                        <input type="text" name="listing[price]" placeholder="2000"  class="form-control" value="<%=listing.price %>" required>
+                        <div class="invalid-feedback">Price should be valid</div>
+                    </div>
+                    <div class="mb-3 col-md-8">
+                        <label for="country" class="form-label">Country</label>
+                        <input type="text" name="listing[country]" placeholder="India"  class="form-control" value="<%=listing.country %>" required>
+                        <div class="invalid-feedback">Country should be valid</div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="location" class="form-label">Location</label>
+                    <input type="text" name="listing[location]" placeholder="enter location"  class="form-control" value="<%=listing.location %>" required>
+                    <div class="invalid-feedback">Location should be valid</div>
+                </div>
+                
+                <button class="btn btn-dark edit-btn">Submit</button>
+                <br><br>
+        
+            </form>
+        </div>
+    </div>
+</body>
