--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,23 @@
 body {
-  font-family: 'Plus Jakarta Sans', sans-serif !important;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .container {
     flex: 1;
 }
 
-/* navbar */
+/* Navbar */
 .navbar {
     height: 5rem;
     background-color: white;
 }
 
 .fa-compass {
-    color: #fe424d
+    color: #fe424d;
+    font-size: 2rem;
 }
 
 .nav-link {
@@ -24,27 +25,27 @@ body {
 }
 
 
-/* footer */
-.f-info-links a{
+/* Footer */
+.f-info-links a {
     text-decoration: none;
     color: #222222;
-
 }
-.f-info-links a:hover{
+.f-info-links a:hover {
     text-decoration: underline;
-
 }
 
-.f-info-links, .f-info-socials, .f-info-brand {
+.f-info-links {
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.f-info-socials i {
+.f-info-social {
+    margin-top: 0.5rem;
+    width: 100%;
+}
+
+.f-info-social i {
+    font-size: 1.3rem;
     margin-right: 1rem;
-    font-size: 1.2rem;
 }
 
 .f-info {
@@ -54,7 +55,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: space-evenly;
 }
 
 
@@ -63,63 +63,59 @@ body {
     border: none !important;
     margin-bottom: 2rem;
 }
+
 .card-img-top {
     border-radius: 1rem !important;
     width: 100% !important;
     object-fit: cover !important;
-
 }
 
 .card-body {
-    padding: 0 !important;
+    padding: 0 !important
+}
+.card-text p {
+    font-weight: 400;
 }
 
-.card-text p {
-    font-weight: 400 !important;
-}
 
 .listing-link {
     text-decoration: none;
 }
 
-/* Card Effect */
+/* Card effect */
 .card-img-overlay {
     opacity: 0;
 }
+
 .card-img-overlay:hover {
+    opacity: 0.2;
     background-color: white;
-    opacity: 0.15;
 }
 
 
-/* New */
-.add-btn {
-    background-color: #fe424d !important;
-    border: none !important;
-}
-
-/* Edit */
-.edit-btn {
+/* New page */
+.add-btn, .edit-btn, .del-btn {
     background-color: #fe424d !important;
     border: none !important;
 }
 
 /* Show Page */
 .show-img {
-    height: 30vh;
+    height: 40vh;
 }
 
 .btns {
     display: flex;
 }
 
-.show-card {
-    padding-left: 0;
-    padding-right: 0;
+/* Error page */
+.alert-danger {
+    text-align: center;
 }
 
-/* Map */
+
+/* map */
 #map { 
     height: 400px;
     width: 80vh;
-    }
+}
