--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,12 +1,11 @@
 <footer>
     <div class="f-info">
-        <div class="f-info-socials">
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
-
+        <div class="f-info-social">
+            <a href="https://www.facebook.com/profile.php?id=100084825266241&mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/saikaatsaha/"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://twitter.com/Saikaatsaha"><i class="fa-brands fa-twitter"></i></a>
         </div>
-        <div class="f-info-brand">&copy; Wanderlust Private Limited</div>
+        <div>&copy;Wanderlust Private Ltd</div>
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
             <a href="/terms">Terms</a>
