added contact field

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -51,6 +51,11 @@
                     <input type="text" name="listing[location]" placeholder="enter location"  class="form-control" required>
                     <div class="invalid-feedback">Location should be valid</div>
                 </div>
+                <div class="mb-3 col-md-4">
+                    <label for="contact" class="form-label">Phone No.</label>
+                    <input type="text" name="listing[contact]" placeholder="0000000000"  class="form-control" required>
+                    <div class="invalid-feedback">Contact should be valid</div>
+                </div>
                 
                 <button class="btn btn-dark add-btn">Submit</button>
                 <br><br>
