--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -88,6 +88,11 @@
                     <input type="text" name="listing[location]" placeholder="enter location"  class="form-control" value="<%=listing.location %>" required>
                     <div class="invalid-feedback">Location should be valid</div>
                 </div>
+                <div class="mb-3 col-md-4">
+                  <label for="contact" class="form-label">Phone No.</label>
+                  <input type="text" name="listing[contact]" placeholder="0000000000"  class="form-control" value="<%=listing.contact %>" required>
+                  <div class="invalid-feedback">Contact should be valid</div>
+              </div>
                 
                 <button class="btn btn-dark edit-btn">Submit</button>
                 <br><br>
