--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -54,6 +54,7 @@
                     <p class="card-text"><%=listing.description %></p>
                     <p class="card-text">&#8377;<%=listing.price.toLocaleString("en-IN") %></p>
                     <p class="card-text"><%=listing.location %>, <%=listing.country %></p>
+                    <p class="card-text"><b><i class="fa-solid fa-phone"></i> :- <%=listing.contact %></b></p>
                 </div>
         </div>
 
