modified contact details

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -53,7 +53,7 @@
                 </div>
                 <div class="mb-3 col-md-4">
                     <label for="contact" class="form-label">Phone No.</label>
-                    <input type="text" name="listing[contact]" placeholder="0000000000"  class="form-control" required>
+                    <input type="text" name="listing[contact]" placeholder="0000000000" max="9999999999" min="1000000000"  class="form-control" required>
                     <div class="invalid-feedback">Contact should be valid</div>
                 </div>
                 
