--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -36,7 +36,7 @@
 
         <div class="navbar-nav ms-auto">
           <form class="d-flex" role="search" method="get" action="/listings/search">
-            <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations" aria-label="Search" name="country">
+            <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations" aria-label="Search" name="location">
             <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
           </form>
         </div>
