--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,4 +1,3 @@
-
 <% layout("/layouts/boilerplate") %>
 <style>
     #filters {
@@ -36,6 +35,15 @@
         display: flex;
         align-items: center;
         margin-left: 2rem;
+    }
+    @media (max-width: 431px) {
+        .filter, .tax-toggle {
+            display: none;
+        }
+        .alllistings {
+            margin-top: 2rem;
+        }
+        
     }
 
 </style>
@@ -110,7 +118,7 @@
         </div>
     </div>
 
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 alllistings">
         <% for(listing of allListings) { %>
             <a href="/listings/<%=listing._id %>" class="listing-link">
                 <div class="card listing-card ">
