updated new.ejs, edit.ejs, search.ejs

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,7 +2,7 @@
 <body>
     
     <div class="row mt-3">
-        <div class="col-8 offset-2">
+        <div class="col-md-8 offset-md-2">
             <h3>Edit your chat here</h3>
             <form method="post" action="/listings/<%=listing._id %>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
                 <div class="mb-3">
@@ -90,7 +90,7 @@
                 </div>
                 <div class="mb-3 col-md-4">
                   <label for="contact" class="form-label">Phone No.</label>
-                  <input type="text" name="listing[contact]" placeholder="0000000000"  class="form-control" max="9999999999" min="1000000000" value="<%=listing.contact %>" required>
+                  <input type="text" name="listing[contact]" placeholder="0000000000"  class="form-control" value="<%=listing.contact %>" required>
                   <div class="invalid-feedback">Contact should be valid</div>
               </div>
                 
