--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 <body>
     <div class="row mt-3">
-        <div class="col-8 offset-2">
+        <div class="col-md-8 offset-md-2">
             <h3>Create a new listing here</h3>
             <form method="post" action="/listings" novalidate class="needs-validation" enctype="multipart/form-data">
                 <div class="mb-3">
@@ -53,7 +53,7 @@
                 </div>
                 <div class="mb-3 col-md-4">
                     <label for="contact" class="form-label">Phone No.</label>
-                    <input type="text" name="listing[contact]" placeholder="0000000000" max="9999999999" min="1000000000"  class="form-control" required>
+                    <input type="text" name="listing[contact]" placeholder="0000000000"  class="form-control" required>
                     <div class="invalid-feedback">Contact should be valid</div>
                 </div>
                 
