--- a/views/listings/search.ejs
+++ b/views/listings/search.ejs
@@ -37,6 +37,16 @@
         margin-left: 2rem;
     }
 
+    @media (max-width: 431px) {
+        .filter, .tax-toggle {
+            display: none;
+        }
+        .alllistings {
+            margin-top: 2rem;
+        }
+        
+    }
+
 </style>
 
 <body>
